Fixed collapse nav, fixed nav ids, set min-height panels

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,10 +127,6 @@
     transform: rotate(360deg);
 }
 
-#started .btn-group .btn-default{
-    color: #000;
-}
-
-#started .btn-group{
-    border: 1px solid lightgray;
+#learn-more .panel .panel-body{
+    min-height:280px;
 }
